--- a/Oregon Trail/Oregon Trail/Windows/Continue.xaml
+++ b/Oregon Trail/Oregon Trail/Windows/Continue.xaml
@@ -5,6 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Oregon_Trail.Windows"
         mc:Ignorable="d"
+        ResizeMode="NoResize"
         Title="Continue" Height="300" Width="400">
     <Grid>
         <Grid.ColumnDefinitions>
@@ -24,15 +25,20 @@
             <RowDefinition Height="45"/>
         </Grid.RowDefinitions>
 
-        <Border BorderThickness="1" BorderBrush="Gray" Grid.Column="1" Grid.Row="1" Height="150" Width="80" Panel.ZIndex="1"/>
-        <Border BorderThickness="1" BorderBrush="Gray" Grid.Column="3" Grid.Row="1" Height="150" Width="80" Panel.ZIndex="1"/>
-        <Border BorderThickness="1" BorderBrush="Gray" Grid.Column="5" Grid.Row="1" Height="150" Width="80" Panel.ZIndex="1"/>
-        <Button x:Name="game1Button" Content="Game One" Height="30" Width="80" FontSize="12" Grid.Column="1" Grid.Row="3" Click="game1Button_Click" />
-        <Button x:Name="game2Button" Content="Game Two" Height="30" Width="80" FontSize="12" Grid.Column="3" Grid.Row="3" />
-        <Button x:Name="game3Button" Content="Game Three" Height="30" Width="80" FontSize="12" Grid.Column="5" Grid.Row="3" />
-        <TextBlock x:Name="game1Desc" Text="" Height="150" Width="80" Grid.Column="1" Grid.Row="1" Background="Beige"/>
-        <TextBlock x:Name="game2Desc" Text="" Height="150" Width="80" Grid.Column="3" Grid.Row="1" Background="Beige"/>
-        <TextBlock x:Name="game3Desc" Text="" Height="150" Width="80" Grid.Column="5" Grid.Row="1" Background="Beige"/>
+        <Border BorderThickness="1" BorderBrush="Gray" Grid.Column="1" Grid.Row="1" Height="150" Width="80" Panel.ZIndex="1">
+            <TextBlock x:Name="game1Desc" Text="" Height="150" Width="80" Background="Beige"/>
+        </Border>
+        <Border BorderThickness="1" BorderBrush="Gray" Grid.Column="3" Grid.Row="1" Height="150" Width="80" Panel.ZIndex="1">
+            <TextBlock x:Name="game2Desc" Text="" Height="150" Width="80" Background="Beige"/>
+        </Border>
+        <Border BorderThickness="1" BorderBrush="Gray" Grid.Column="5" Grid.Row="1" Height="150" Width="80" Panel.ZIndex="1">
+            <TextBlock x:Name="game3Desc" Text="" Height="150" Width="80" Background="Beige"/>
+        </Border>
+
+
         <Button x:Name="PreviousPage" Content="&lt;-" Height="25" Width="25" Grid.Column="0" Grid.Row="0" Click="PreviousPage_Click"/>
+        <Button x:Name="game1Button" Content="Game One" Height="30" Width="80" FontSize="12" Grid.Column="1" Grid.Row="3" Click="game1Button_Click" />
+        <Button x:Name="game2Button" Content="Game Two" Height="30" Width="80" FontSize="12" Grid.Column="3" Grid.Row="3" Click="game2Button_Click" />
+        <Button x:Name="game3Button" Content="Game Three" Height="30" Width="80" FontSize="12" Grid.Column="5" Grid.Row="3" Click="game3Button_Click" />
     </Grid>
 </Window>
